RESOLVED FIXED179159
[Cairo] CairoGlyphToPathTranslator::path() shouldn't fill out the glyph path
https://bugs.webkit.org/show_bug.cgi?id=179159
Summary [Cairo] CairoGlyphToPathTranslator::path() shouldn't fill out the glyph path
Zan Dobersek
Reported 2017-11-01 23:52:45 PDT
[Cairo] CairoGlyphToPathTranslator::path() shouldn't fill out the glyph path
Attachments
Patch (1.90 KB, patch)
2017-11-01 23:59 PDT, Zan Dobersek
no flags
Zan Dobersek
Comment 1 2017-11-01 23:59:15 PDT
Zan Dobersek
Comment 2 2017-11-06 00:05:55 PST
Comment on attachment 325693 [details] Patch Clearing flags on attachment: 325693 Committed r224483: <https://trac.webkit.org/changeset/224483>
Zan Dobersek
Comment 3 2017-11-06 00:05:59 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-11-15 12:23:34 PST
Note You need to log in before you can comment on or make changes to this bug.