[Cairo] CairoGlyphToPathTranslator::path() shouldn't fill out the glyph path https://bugs.webkit.org/show_bug.cgi?id=179159

Reviewed by Michael Catanzaro.

In case of non-zero synthetic bold offset in CairoGlyphToPathTranslator::path(),
cairo_glyph_path() should be called just like in the generic case.
cairo_show_glyphs() performs the actual rasterization of the glyph, but we're
only interested in the generated path operations.

No new tests -- covered by existing tests.

* platform/graphics/cairo/FontCairo.cpp:
(WebCore::CairoGlyphToPathTranslator::path):


Canonical link: https://commits.webkit.org/195402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@224483 268f45cc-cd09-0410-ab3c-d52691b4dbfc